<resources>
    <string name="test_record_link_to_server_recordings2">Listen to your recordings at</string>
    <string name="app_name">Bird Monitor</string>
    <string name="app_icon_name">Bird Monitor</string>
    <string name="activity_or_fragment_title_welcome">Welcome</string>
    <string name="activity_or_fragment_title_vitals">App Vitals</string>
    <string name="activity_or_fragment_title_setup">Setup</string>
    <string name="activity_or_fragment_title_advanced_setup">Advanced Setup</string>
    <string name="activity_or_fragment_title_main">Bird Monitor</string>
    <string name="activity_or_fragment_title_register_phone">Register Phone</string>
    <string name="activity_or_fragment_title_rooted">Rooted Options</string>
    <string name="activity_or_fragment_title_gps">GPS Location</string>
    <string name="activity_or_fragment_title_walking">Walking?</string>
    <string name="activity_or_fragment_title_manage_recordings">Recordings</string>
    <string name="activity_or_fragment_title_test_record">Test Record</string>
    <string name="activity_or_fragment_title_internet_connection">Internet Connection</string>
    <string name="activity_or_fragment_title_warning_sound">Warning Sound</string>
    <string name="activity_or_fragment_title_activity_ignore_low_battery">Ignore Low Battery</string>
    <string name="activity_or_fragment_title_activity_frequency">Frequency</string>
    <string name="activity_or_fragment_title_activity_sun_alarms">Sun Alarms</string>
    <string name="activity_or_fragment_title_settings_for_testing">Settings for Testing</string>
    <string name="activity_or_fragment_title_settings_for_audio_source">Audio Source</string>
    <string name="activity_or_fragment_title_turn_off_or_on">Turn Off or On</string>
    <string name="activity_or_fragment_title_bird_count">Bird Count</string>
    <string name="activity_or_fragment_title_create_account">Create Account</string>
    <string name="activity_or_fragment_title_sign_in">Sign In</string>
    <string name="activity_or_fragment_title_create_or_choose_group">Create/Choose Group</string>
    <string name="activity_or_fragment_title_gps_location">GPS Location</string>
    <string name="help_text_welcome">Thank you for installing the Bird Monitor app.  The app will automatically make audio recordings every hour (and additional recordings around dawn and dusk) and upload them to the Cacophony Project data server.  This will allow monitoring of birdsong near your phone.  To use this app, first complete the setup steps (swipe to move through the screens in turn).\n\nThank you again for supporting The Cacophony Project https://cacophony.org.nz/ </string>
    <string name="help_text_create_account">The Bird Monitor is designed to work with an account on the Cacophony server.  Please fill in the form to create your account, or if you already have an account you can skip this step.</string>
    <string name="help_text_sign_in">Signing in, will enable you to create a group on the server, or select a group that you have previously created.\n\nIf you already know the group that you are going to use with this phone, you can skip this step.</string>
    <string name="help_text_create_or_choose_group">Your phone needs to be registered with a group on the server.  If you signed in on the previous page, you will see a list of groups associated with your account.\n\nYou can either select one of the groups or create a new group.</string>
    <string name="help_text_test_record">Using the Record Now button will allow you to get feedback on whether your phone has been setup correctly.  \n\nThe app will record for the normal length of one minute, so you will need to wait that long.  A series of messages are displayed to give you feedback on the progress of recording and uploading to the server.  \n\nThe Record Now button is disabled (greyed out) if a recording is already in progress, or if the app has been disabled.  You can enable the app from the Main\\Home screen.  Once the file(s) have been uploaded, you can confirm this by checking on the server page.</string>
    <string name="help_text_register_phone">Once you have created a group on the server, you can enter it in the \'Group Name\' field, and also enter a unique name for your phone (at least 4 characters).\n\nPress the button to register.  You will see  messages informing you of progress - the last message should say that registration has been successful.\n\nYou can un-register this device if you want to change either the group or name.</string>
    <string name="help_text_battery">Normally the app will not record when the battery is getting low.  But, you can ignore a low battery when out walking or if you have just left the phone somewhere without power and you want it to keep recording until the battery goes flat. \n\nNote: It is NOT advisable to use this option if you are using a solar panel as once the battery has gone completely flat, the phone is very unlikely to turn back on even if the solar panel re-charges the battery.</string>
    <string name="help_text_turn_off_or_on">You may want to prevent the app from making recordings.  This is useful if you have installed the app on a phone that you are now keeping close to you.\n\nIf you choose this option, the \‘Disable Recording\’ button on the home screen will instead display \'Enable Recording\'.</string>
    <string name="help_text_frequency">The App\’s default settings have been chosen to be suitable for most situations and so the following should only be changed if you have a good reason.\n\nRecord More Often:  The App will make recordings every hour during the day and night, and every ten minutes for an hour each side of dawn and dusk.  This frequency is seen as a good compromise between getting a reasonable sample of bird song, not overloading the Cacophony server and saving power.  If you need to, you can choose to \’Record more often\’ which will increase the frequency to record every 15 minutes through out the day and night.  There is also the possibility that at some point in the future, the server may limit the number of recordings received from a device.\n\nUpload after every recording: If you are not concerned with how much power your phone is using and you can’t wait to hear your birds, then this option will upload each recording as soon as it has finished – rather than every six hours. \n\nPeriodically update GPS will attempt to get a new GPS location every 15 minutes.  This option is automatically selected when you choose walking mode, but if you know that you will not be able to get a GPS location, turning this off may save some power.</string>
    <string name="help_text_gps_location">Setting the GPS allows the location of your recordings to be known.  This can help identify birds and will allow spatial mapping to occur.\n\nPress the button to set or update the location (you may be asked to turn on the phone\'s location/gps service).\n\nThe phone may take a few minutes to get a location, and you may need to go outside.</string>
    <string name="help_text_internet_connection">The App can work in a number of internet connection configurations - BUT it is most likely that your will use it in \'Normal\' mode. \n\nIf your phone has been rooted, \’Normal\’ mode will enable the phones flight (airplane) mode to save power.  If the phone has NOT been rooted, still use Normal mode and the app will work just fine. \n\nIf you are going to be using the phone to make recordings in a location that you know has no internet connection, then use \’Offline\’ mode and the app will not waste power by attempting to acquire an internet connection.  Also manually enable airplane mode as the phone will not be able to do this automatically if it hasn\’t been rooted. \n\n\'Online\' mode will not enable airplane mode.  It requires the phone to be plugged into the mains power supply as it will use too much power to work with a solar panel.  Online mode is useful if you want to remotely access your phone, perhaps because you have remote control software installed.  If the phone isn\’t in Online mode, you would be very unlikely to be able to connect to the phone.</string>
    <string name="help_text_rooted"> If the phone is rooted Bird Monitor can use some extra settings.\n\nAeroplane Mode\nIn order to save power Bird Monitor will enable Aeroplane mode in between recordings \n\nAuto Update\nBird Monitor will check for updates, if found it will download and install them.\n\nIf you got this phone from The Cacophony Project, please leave these settings as you found them.</string>
    <string name="help_text_warning_sound">Play a short warning sound before a recording is made (useful for when out walking with the phone or testing at home). \n\nNote: using an external microphone will probably disable this function.</string>
    <string name="help_text_settings_for_testing">App Testers: Use the test server which will allow you to increase the recording frequency and use short recordings. Note: Data and recordings on the server are likely to be wiped at some point.</string>
    <string name="help_text_manage_recordings">Normally you will not need to \’Manage Recordings\’ as the app will automatically upload your recordings to the server.\n\nHowever, if you have been using the phone without an internet connection (perhaps you have been for a walk or have just re-established an internet connection after leaving your phone to make recordings in a location without out internet access) you can now use this screen to upload all the recordings on the phone.  \n\nBefore you press the upload button, the number of recordings currently on the phone is displayed and should change to zero if all the recordings are successfully uploaded.\n\nIf you prefer, you can delete all the recordings on the phone – perhaps you didn’t realize you had been making recordings! Careful with this option – you can’t get them back.</string>
    <string name="help_text_settings_for_audio_source">Take a look at: https://developer.android.com/reference/android/media/MediaRecorder.AudioSource</string>
    <string name="not_rooted">Your phone does not have root permissions</string>
    <string name="no_autoupdate">Bird Monitor Update Service cannot be Found</string>
    <string name="up_to_date">Bird Monitor is up to date</string>
    <string name="required_permissions">Required Permissions: ?</string>
    <string name="registered">Registered: ?</string>
    <string name="logged_in_to_server">Logged in to server</string>
    <string name="device_name_colon">Device Name:</string>
    <string name="gps_text">GPS location: </string>
    <string name="message_text">Messages: </string>
    <string name="basic_setup">Basic Setup</string>
    <string name="vitals">Vitals</string>
    <string name="five_minute_bird_count">5 min Bird Count</string>
    <string name="gps_location">GPS Location</string>
    <string name="advanced">Advanced</string>
    <string name="disable_recording">Disable Recording</string>
    <string name="rec_length">Recording Length (Mins)</string>
    <string name="sunrise_offset">Sunrise Offset (Mins)</string>
    <string name="sunset_offset">Sunset Offset (Mins)</string>
    <string name="noon_offset">Noon Offset (Mins)</string>
    <string name="update_alarms">Update Alarms</string>
</resources>