<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    tools:layout_editor_absoluteY="25dp">

    <Switch
        android:id="@+id/swDawnDuskAlarms"
        style="@style/SwitchAndRadioButtonCompatTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:showText="true"
        android:text="@string/enable_dawn_dusk"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dawkDuskView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/swDawnDuskAlarms">

        <TextView
            android:id="@+id/tvRecTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/rec_length"
            app:layout_constraintTop_toTopOf="@id/etRecLength"
            app:layout_constraintLeft_toLeftOf="parent" />
        <EditText
            android:id="@+id/etRecLength"
            android:layout_width="100dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvRecTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="number"/>


        <TextView
            android:id="@+id/tvSunrise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sunrise_offset"
            app:layout_constraintTop_toTopOf="@+id/etSunriseOffset"
            app:layout_constraintLeft_toLeftOf="parent" />
        <EditText
            android:id="@+id/etSunriseOffset"
            android:layout_width="100dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etRecLength"
            app:layout_constraintLeft_toRightOf="@+id/tvRecTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="numberSigned"/>

        <TextView
            android:id="@+id/tvNoon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/noon_offset"
            app:layout_constraintTop_toTopOf="@+id/etNoonOffset"
            app:layout_constraintLeft_toLeftOf="parent" />
        <EditText
            android:id="@+id/etNoonOffset"
            android:layout_width="100dp"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/etSunriseOffset"
            app:layout_constraintLeft_toRightOf="@+id/tvRecTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="numberSigned"/>

        <TextView
            android:id="@+id/tvSunset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sunset_offset"
            app:layout_constraintTop_toTopOf="@+id/etSunsetOffset"
            app:layout_constraintLeft_toLeftOf="parent" />
        <EditText
            android:id="@+id/etSunsetOffset"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/etNoonOffset"
            app:layout_constraintLeft_toRightOf="@+id/tvRecTitle"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="numberSigned"/>

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_alarms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSunsetOffset" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>